--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@reach/router": "^1.2.1",
+    "antd": "^4.0.4",
     "bcrypt": "^3.0.7",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
