--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-socket.io-session": "^1.3.5",
     "google-auth-library": "^5.5.1",
     "mongoose": "^5.7.7",
+    "node-osu": "^2.2.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
