--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "express-socket.io-session": "^1.3.5",
     "google-auth-library": "^5.5.1",
     "mongoose": "^5.7.7",
+    "node-fetch": "^2.6.0",
     "node-osu": "^2.2.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.5.0",
     "pg": "^7.17.1",
     "pino": "^5.16.0",
     "react": "^16.7.0",
