--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
     "google-auth-library": "^5.5.1",
+    "heroku-ssl-redirect": "0.0.4",
     "mongoose": "^5.7.7",
     "node-fetch": "^2.6.0",
     "node-osu": "^2.2.0",
