--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app-skeleton",
+  "name": "gtsosu",
   "version": "1.0.0",
-  "description": "",
+  "description": "Official website for the Global Taiko Showdown",
   "main": "server/server.js",
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/cory2067/gtsosu.git"
   },
   "author": "",
   "license": "ISC",
@@ -19,13 +19,10 @@
     "@awaitjs/express": "^0.4.0",
     "@reach/router": "^1.2.1",
     "antd": "^4.0.4",
-    "bcrypt": "^3.0.7",
-    "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
-    "express-socket.io-session": "^1.3.5",
     "google-auth-library": "^5.5.1",
     "heroku-ssl-redirect": "0.0.4",
     "mongoose": "^5.7.7",
@@ -33,7 +30,6 @@
     "node-osu": "^2.2.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.5.0",
     "pg": "^7.17.1",
