--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.7",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "url-loader": "^1.1.2"
   },
