--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "pino": "^5.16.0",
     "pino-pretty": "^3.5.0",
     "react": "^16.7.0",
+    "react-country-flag": "^2.0.1",
     "react-dom": "^16.7.0",
-    "react-flag-icon-css": "^1.0.25",
     "react-google-login": "^5.0.7",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
