--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.0",
     "google-auth-library": "^5.5.1",
     "heroku-ssl-redirect": "0.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "node-fetch": "^2.6.0",
     "node-osu": "^2.2.0",
