--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@awaitjs/express": "^0.4.0",
     "@reach/router": "^1.3.4",
     "antd": "^4.5.4",
