--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gtsosu",
   "version": "1.0.0",
   "description": "Official website for the Global Taiko Showdown",
-  "main": "server/server.js",
+  "main": "built/server.js",
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon -q --ignore client/ | tee logs.txt | pino-pretty",
@@ -44,6 +44,7 @@
     "react-google-login": "^5.1.21",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "typescript": "^4.6.2",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
@@ -54,6 +55,8 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.8.3",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "1.15.16",
     "babel-loader": "^8.1.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
