--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon -q --ignore client/ | tee logs.txt | pino-pretty",
-    "build": "webpack"
+    "build": "webpack",
+    "prettier": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -57,6 +58,7 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "2.5.1",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^0.23.1",
     "webpack": "^4.44.1",
