--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gtsosu",
   "version": "1.0.0",
   "description": "Official website for the Global Taiko Showdown",
-  "main": "built/server.js",
+  "main": "server/server.ts",
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon -q --ignore client/ | tee logs.txt | pino-pretty",
@@ -18,7 +18,7 @@
   "homepage": "",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@awaitjs/express": "^0.4.0",
+    "@awaitjs/express": "^0.9.0",
     "@reach/router": "^1.3.4",
     "antd": "^4.5.4",
     "connect-mongo": "^3.2.0",
@@ -32,18 +32,19 @@
     "mongoose": "^5.10.0",
     "node-fetch": "^2.6.7",
     "node-osu": "^2.2.0",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^7.18.2",
-    "pino": "^5.17.0",
+    "pino": "^7.8.1",
     "pino-pretty": "^3.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "url-loader": "^1.1.2"
   },
@@ -56,7 +57,8 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.8.3",
     "@types/express": "^4.17.13",
-    "@types/express-session": "1.15.16",
+    "@types/express-session": "^1.15.16",
+    "@types/passport": "^1.0.7",
     "babel-loader": "^8.1.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
