Convert api/auth to typescript

--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@babel/preset-stage-0": "^7.8.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.15.16",
+    "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
+    "@types/passport-oauth2": "^1.4.11",
     "babel-loader": "^8.1.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
