--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@awaitjs/express": "^0.9.0",
     "@reach/router": "^1.3.4",
     "antd": "^4.5.4",
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^4.6.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
@@ -30,6 +30,7 @@
     "google-auth-library": "^5.10.1",
     "heroku-ssl-redirect": "0.0.4",
     "moment": "^2.27.0",
+    "mongodb": "4.3.1",
     "mongoose": "^6.2.6",
     "node-fetch": "^2.6.7",
     "node-osu": "^2.2.0",
@@ -59,7 +60,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.8.3",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.15.16",
+    "@types/express-session": "^1.17.3",
     "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-oauth2": "^1.4.11",
