--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es6",
     "module": "commonjs",
     "esModuleInterop": true,
+    "strictNullChecks": true,
   },
   "include": ["./server/**/*.js", "./server/**/*.ts"]
 }
