--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon -q --ignore client/ | tee logs.txt | pino-pretty",
-    "build": "webpack",
+    "build": "tsc && webpack",
     "prettier": "prettier --write .",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "test": "NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -61,6 +62,7 @@
     "@babel/preset-stage-0": "^7.8.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.3",
+    "@types/jest": "^27.4.1",
     "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-oauth2": "^1.4.11",
@@ -68,9 +70,12 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^27.5.1",
     "prettier": "2.5.1",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^0.23.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
