--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
+      - run: echo $GITHUB_ACTION
+      - run: echo $TEST_VAR
       - run: npm ci
       - run: npm run build
       - run: npm test
