--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -9,14 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: testing
+    environment: gtsosu
 
     steps:
+      - env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          DEV_MONGO_SRV: ${{ secrets.DEV_MONGO_SRV }}
+          OSU_API_KEY: ${{ secrets.OSU_API_KEY }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - run: echo $GITHUB_ACTION
       - run: echo $TEST_VAR
       - run: npm ci
       - run: npm run build
