--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -10,14 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: gtsosu
+    env:
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      DEV_MONGO_SRV: ${{ secrets.DEV_MONGO_SRV }}
+      OSU_API_KEY: ${{ secrets.OSU_API_KEY }}
+      SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
 
     steps:
-      - env:
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-          DEV_MONGO_SRV: ${{ secrets.DEV_MONGO_SRV }}
-          OSU_API_KEY: ${{ secrets.OSU_API_KEY }}
-          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
