--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ant-design/icons": "^4.7.0",
     "@awaitjs/express": "^0.9.0",
     "@reach/router": "^1.3.4",
-    "antd": "^4.5.4",
+    "antd": "^4.13.0",
     "connect-mongo": "^4.6.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
@@ -48,6 +48,7 @@
     "react-google-login": "^5.1.21",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "^5.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "url-loader": "^1.1.2"
@@ -71,12 +72,15 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.5.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "prettier": "2.5.1",
+    "react-error-overlay": "^6.0.9",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^0.23.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
-    "webpack": "^4.44.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
