--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
-    "url-loader": "^1.1.2"
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -68,20 +67,21 @@
     "@types/passport": "^1.0.7",
     "@types/passport-oauth2": "^1.4.11",
     "babel-loader": "^8.1.0",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "prettier": "2.5.1",
     "react-error-overlay": "^6.0.9",
     "react-hot-loader": "^4.12.21",
-    "style-loader": "^0.23.1",
+    "style-loader": "^3.3.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
