--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@awaitjs/express": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reach/router": "^1.3.4",
     "antd": "^4.13.0",
     "connect-mongo": "^4.6.0",
