--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "if test \"$NODE_ENV\" = \"production\" ; then npm run prod ; else npm run dev ; fi",
     "dev": "nodemon -q --ignore client/ | tee logs.txt | pino-pretty",
-    "prod": "node built/server.js | tee logs.txt | pino-pretty",
+    "prod": "forever built/server.js | tee logs.txt | pino-pretty",
     "build": "tsc && webpack",
     "prettier": "prettier --write .",
     "postinstall": "patch-package",
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "forever": "^4.0.3",
     "google-auth-library": "^5.10.1",
     "heroku-ssl-redirect": "0.0.4",
     "moment": "^2.29.2",
@@ -50,7 +51,6 @@
     "pg": "^7.18.2",
     "pino": "^7.8.1",
     "pino-pretty": "^3.6.1",
-    "pm2": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
