--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "antd": "^4.13.0",
     "connect-mongo": "^4.6.0",
     "core-js": "^3.6.5",
+    "discord.js": "^14.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
