--- a/package.json
+++ b/package.json
@@ -69,12 +69,15 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.8.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^27.4.1",
     "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-oauth2": "^1.4.11",
+    "@types/react": "^16.14.52",
+    "@types/react-dom": "^16.9.24",
     "babel-loader": "^8.1.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
