--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reach/router": "^1.3.4",
+    "@types/react-dom": "^17.0.25",
     "antd": "^4.13.0",
     "connect-mongo": "^4.6.0",
     "core-js": "^3.6.5",
@@ -76,8 +77,7 @@
     "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-oauth2": "^1.4.11",
-    "@types/react": "^16.14.52",
-    "@types/react-dom": "^16.9.24",
+    "@types/react": "17.0.50",
     "babel-loader": "^8.1.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
