--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reach/router": "^1.3.4",
+    "@types/cors": "^2.8.17",
     "antd": "^4.13.0",
     "connect-mongo": "^4.6.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "discord.js": "^14.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
